Melhorias de sintaxe